src/test/ui/async-await/await-keyword/2015-edition-warning.stderr
error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:7:13
   |
LL |     pub mod await {
   |             ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
note: the lint level is defined here
  --> $DIR/2015-edition-warning.rs:4:9
   |
LL | #![deny(keyword_idents)]
   |         ^^^^^^^^^^^^^^
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:10:20
   |
LL |         pub struct await;
   |                    ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:15:16
   |
LL | use outer_mod::await::await;
   |                ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:15:23
   |
LL | use outer_mod::await::await;
   |                       ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:22:11
   |
LL |     match await { await => {} }
   |           ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:22:19
   |
LL |     match await { await => {} }
   |                   ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: aborting due to 6 previous errors

